Fix: IllegalArgument Exception in String converter
Signed-off-by: Asif Sohail Mohammed <nsifmoh@amazon.com>