@@ -7,12 +7,11 @@ package org.opensearch.dataprepper.typeconverter;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class StringConverterTests {
     @Test
@@ -64,9 +63,25 @@ public class StringConverterTests {
         assertThat(converter.convert(strConstant), equalTo(strConstant));
     }
     @Test
-    void testInvalidStringConversion() {
+    void testNullValueStringConversion() {
         StringConverter converter = new StringConverter();
-        final Map<Object, Object> map = Collections.emptyMap();
-        assertThrows(IllegalArgumentException.class, () -> converter.convert(map));
+        final String expectedString = "";
+        assertThat(converter.convert(null), equalTo(expectedString));
+    }
+
+    @Test
+    void testMapToStringConversion() {
+        StringConverter converter = new StringConverter();
+        final Map<Object, Object> map = Map.of("testKey", "testValue");
+        final String expectedString = "{testKey=testValue}";
+        assertThat(converter.convert(map), equalTo(expectedString));
+    }
+
+    @Test
+    void testListToStringConversion() {
+        StringConverter converter = new StringConverter();
+        final List<Object> list = List.of("listItem1", "listItem2");
+        final String expectedString = "[listItem1, listItem2]";
+        assertThat(converter.convert(list), equalTo(expectedString));
     }
 }
